--- a/Neural_Network.ipynb
+++ b/Neural_Network.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d3ba9a2",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0ad87ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9efc2ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a9435b6",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b58442f2",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "abdd5d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +227,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4591e1d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +243,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "043af03e",
    "metadata": {},
    "source": [
     "### Create a neural network model"
@@ -259,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a3dccd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a24b4db0",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +299,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b59fef0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +320,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "95aceafd",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a72a3e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -394,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
