--- a/computational-material/models/user_interface_dt_rf.ipynb
+++ b/computational-material/models/user_interface_dt_rf.ipynb
@@ -1,20 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "416d5925",
+   "cell_type": "markdown",
+   "id": "21d1e315",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# If first time using gradio, try to run this\n",
-    "pip install gradio"
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b11366",
+   "metadata": {},
+   "source": [
+    "This notebook shows an user interface to let users get the predicted bandgap value or they can get the crystal lattice parameter a. We provide two machine learning methods to predict the bandgap, users can enter the crystal lattice parameters and choose the machine learning methods they wanna use to output the bandgap."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7bfcf091",
+   "execution_count": 58,
+   "id": "03f9b1d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +36,26 @@
     "import seaborn as sns\n",
     "import matplotlib \n",
     "from matplotlib import pyplot as plt\n",
-    "import optuna\n",
     "import sklearn.model_selection\n",
     "import sklearn.preprocessing\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "#user interface\n",
     "import gradio as gr\n",
     "\n",
-    "# Set larger fontsize for all plots\n",
-    "matplotlib.rcParams.update({'font.size': 18})\n",
-    "from IPython.display import clear_output"
+    "import keras\n",
+    "import tensorflow\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasRegressor\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2f9db16f",
+   "id": "597636ca",
    "metadata": {},
    "source": [
     "### Load data"
@@ -53,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "53f2c81f",
+   "execution_count": 9,
+   "id": "36989eb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('bg_struct.csv', index_col=0)"
+    "df = pd.read_csv('../../doc/dataset/bg_struct.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1a812f6f",
+   "execution_count": 10,
+   "id": "aa0c2243",
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +216,7 @@
        "max          168.624134       168.624134        167.256937  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35795200",
+   "id": "65f349e5",
    "metadata": {},
    "source": [
     "#### Define x and y"
@@ -225,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "05f7cb71",
+   "execution_count": 11,
+   "id": "a0fe3ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "604b3a7b",
+   "execution_count": 12,
+   "id": "0b9a7f50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26183331",
+   "id": "4e23a8f1",
    "metadata": {},
    "source": [
     "### Train the decision tree model to predict bandgap"
@@ -255,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "f7b2d5a5",
+   "execution_count": 13,
+   "id": "44999bdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd68fd1a",
+   "id": "7f747b38",
    "metadata": {},
    "source": [
     "### Train the random forest model to predict bandgap"
@@ -278,8 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "6e0fd1e4",
+   "execution_count": 14,
+   "id": "1f960ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84aaf684",
+   "id": "cd5f8e1b",
    "metadata": {},
    "source": [
     "### Use gradio to create user interface to show the predict bandgap value"
@@ -301,15 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "21fefad1",
-   "metadata": {},
+   "execution_count": 65,
+   "id": "22bf1eaf",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7863/\n",
+      "Running on local URL:  http://127.0.0.1:7882/\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -321,7 +333,7 @@
        "        <iframe\n",
        "            width=\"900\"\n",
        "            height=\"500\"\n",
-       "            src=\"http://127.0.0.1:7863/\"\n",
+       "            src=\"http://127.0.0.1:7882/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -329,7 +341,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fca9dc35850>"
+       "<IPython.lib.display.IFrame at 0x7fa295aa6810>"
       ]
      },
      "metadata": {},
@@ -338,12 +350,12 @@
     {
      "data": {
       "text/plain": [
-       "(<fastapi.applications.FastAPI at 0x7fca9c788750>,\n",
-       " 'http://127.0.0.1:7863/',\n",
+       "(<fastapi.applications.FastAPI at 0x7fa2b5a11750>,\n",
+       " 'http://127.0.0.1:7882/',\n",
        " None)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,9 +369,9 @@
     "                                             'cell_angle_alpha', 'cell_angle_beta', 'cell_angle_gamma'])\n",
     "    \n",
     "    if method=='Random Forest':\n",
-    "        return rand.predict(test_point)\n",
-    "    else:\n",
-    "        return regr.predict(test_point)\n",
+    "        return rand.predict(test_point)[0]\n",
+    "    elif method=='Decision Tree':\n",
+    "        return regr.predict(test_point)[0]\n",
     "    \n",
     "    \n",
     "#create input and output objects\n",
@@ -381,6 +393,204 @@
     "                  outputs=[output])\n",
     "gui.launch()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73f94c7c",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cecac1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_nn = df[['cell_lentgh_b', 'cell_lentgh_c', 'cell_angle_alpha', 'cell_angle_beta', 'cell_angle_gamma']].values\n",
+    "Y_nn = df[['cell_length_a']].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "88eb1888",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 12\n",
+    "# create test/train split from the data above and  keep 20% for testing\n",
+    "X_train_pn, X_test_pn, y_train, y_test = train_test_split(X_nn, Y_nn,test_size=0.20, \n",
+    "                                                          random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "928cc173",
+   "metadata": {},
+   "source": [
+    "#### Normalize x and y value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ea64e01a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train a standard scaler model to apply it to the train set and test set\n",
+    "X_train_scaler = StandardScaler().fit(X_train_pn)\n",
+    "X_train_nn = X_train_scaler.transform(X_train_pn)\n",
+    "X_test_nn = X_train_scaler.transform(X_test_pn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e3c603",
+   "metadata": {},
+   "source": [
+    "### Define the neural network model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d5ae4e01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neural_network_model(n1, n2, n3, act1, act2, act3, lr):\n",
+    "        \"\"\"\n",
+    "        activation: 'relu', 'sigmoid', 'linear', 'tanh', 'selu', 'elu'\n",
+    "        \"\"\"\n",
+    "        model = Sequential()\n",
+    "        model.add(Dense(n1, input_dim=5, kernel_initializer='normal', activation=act1))\n",
+    "        model.add(Dense(n2, kernel_initializer='normal', activation=act2))\n",
+    "        model.add(Dense(n3, kernel_initializer='normal', activation=act3))\n",
+    "        model.add(Dense(1, kernel_initializer='normal'))\n",
+    "    \n",
+    "        opt = tensorflow.keras.optimizers.Adam(learning_rate=lr)\n",
+    "    \n",
+    "        model.compile(loss='mean_squared_error', optimizer=opt)\n",
+    "        return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4ecca7a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def opt_nn_model():\n",
+    "        np.random.seed(seed)\n",
+    "        # Create the NN framework\n",
+    "        estimator_opt = KerasRegressor(build_fn=neural_network_model, \n",
+    "                                       n1=256, n2=512, n3=128,\n",
+    "                                       act1=\"linear\", act2=\"sigmoid\", act3=\"sigmoid\", \n",
+    "                                       epochs=150, batch_size=100, verbose=1, lr=0.001)\n",
+    "        estimator_opt.fit(X_train_nn, y_train, validation_split=0.30, epochs=150, \n",
+    "                          batch_size=100, verbose=0)\n",
+    "        return estimator_opt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20c66af7",
+   "metadata": {},
+   "source": [
+    "### Create the user interface to predict crystal lattice parameter a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a1c4ae45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7883/\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://127.0.0.1:7883/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fa295ab5a90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<fastapi.applications.FastAPI at 0x7fa2b5a11750>,\n",
+       " 'http://127.0.0.1:7883/',\n",
+       " None)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def predict_bandgap_nn(length_b, length_c, angle_alpha, angle_beta, angle_gamma):\n",
+    "    # convert the crystal lattice constant to a list\n",
+    "    test = [length_b, length_c, angle_alpha, angle_beta, angle_gamma]\n",
+    "    # convert the list to the dataframe\n",
+    "    test_point = pd.DataFrame([test], columns=['cell_lentgh_b', 'cell_lentgh_c',\n",
+    "                                             'cell_angle_alpha', 'cell_angle_beta', 'cell_angle_gamma'])\n",
+    "    X_train_scaler = StandardScaler().fit(X_train_pn)\n",
+    "    test_point_norm = X_train_scaler.transform(test_point)\n",
+    "    return model.predict(test_point_norm.values)\n",
+    "    \n",
+    "    \n",
+    "#create input and output objects\n",
+    "#input object1\n",
+    "input2 = gr.inputs.Textbox(placeholder='Enter Crystal Lattice Length b')\n",
+    "input3 = gr.inputs.Textbox(placeholder='Enter Crystal Lattice Length c')\n",
+    "input4 = gr.inputs.Textbox(placeholder='Enter Crystal Lattice Angle Alpha')\n",
+    "input5 = gr.inputs.Textbox(placeholder='Enter Crystal Lattice Angle Beta')\n",
+    "input6 = gr.inputs.Textbox(placeholder='Enter Crystal Lattice Angle Gamma')\n",
+    "\n",
+    "#output object\n",
+    "output = gr.outputs.Textbox()\n",
+    "\n",
+    "#create interface\n",
+    "gui = gr.Interface(fn=predict_bandgap_nn,\n",
+    "                  inputs=[input2,input3,input4,input5,input6],\n",
+    "                  outputs=[output])\n",
+    "gui.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6c87590",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
