--- a/CIF processing/manualtest_df_CIF.ipynb
+++ b/CIF processing/manualtest_df_CIF.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2fd1d317-60ba-4da8-9633-0fab8a7107a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fda76c18-8132-4d1d-9387-c546b1a184d7",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8318589f-6140-4975-bf1e-5a8880a65ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
